--- a/resources/view/pages/guilds/declarewar.html.twig
+++ b/resources/view/pages/guilds/declarewar.html.twig
@@ -67,13 +67,13 @@
 																		<td>Opponent:</td>
 																		<td>
                                                                         {% if guilds is empty %}
-                                                                        Nenhuma Guild ativada para war.
+                                                                        No war-enabled guilds.
                                                                         {% endif %}
                                                                         {% if guilds is not empty %}
                                                                         <select name="war_opponent">
                                                                             {% for allguilds in guilds %}
-                                                                            <option value="{{ allguilds.name }}">{{ allguilds.name }}</option>
-                                                                            {% endfor %}
+																				<option value="{{ allguilds.name }}">{{ allguilds.name }}</option>
+																			{% endfor %}
                                                                         </select>
                                                                         {% endif %}
                                                                         </td>
